# vitriol

./: .env.sample  .gitignore  Cargo.toml  README.md  default.nix  flake.nix
crates/vtrl_2d/: Cargo.toml
crates/vtrl_2d/src/: lib.rs  renderer.rs
crates/vtrl_common/: Cargo.toml
crates/vtrl_common/src/: asset.rs  channel.rs  debug.rs  error.rs  lib.rs  macros.rs  message.rs  message_bus.rs  render.rs  scripting.rs
crates/vtrl_common/src/render/: bitmap.rs  camera.rs  command.rs  context.rs  packing.rs  queue.rs  text.rs  types.rs
crates/vtrl_core/: Cargo.toml
crates/vtrl_core/src/: app.rs  lib.rs  plugin.rs  schedule.rs
crates/vtrl_core/src/plugin/: time.rs
crates/vtrl_debug/: Cargo.toml
crates/vtrl_debug/src/: lib.rs
crates/vtrl_ecs/: Cargo.toml
crates/vtrl_ecs/macros/: Cargo.toml
crates/vtrl_ecs/macros/src/: lib.rs
crates/vtrl_ecs/src/: component.rs  entity.rs  lib.rs  query.rs  resource.rs  schedule.rs  system.rs  world.rs
crates/vtrl_ecs/src/component/: base.rs  pool.rs  registry.rs
crates/vtrl_ecs/tests/: components.rs  entities.rs  resources.rs  views.rs
crates/vtrl_macros/: Cargo.toml
crates/vtrl_macros/src/: lib.rs
crates/vtrl_opengl/: Cargo.toml
crates/vtrl_opengl/src/: animations.rs  commands.rs  context.rs  lib.rs  plugin.rs  primitives.rs  renderer.rs  renderers.rs  shaders.rs  types.rs
crates/vtrl_opengl/src/primitives/: font.rs  font_atlas.rs  index_buffer.rs  shader_program.rs  shader_storage_buffer.rs  texture.rs  texture_array.rs  uniform_buffer.rs  vertex_array.rs  vertex_buffer.rs
crates/vtrl_opengl/src/renderers/: quad_renderer.rs  text_renderer.rs
crates/vtrl_opengl/src/shaders/: circle.frag.glsl  circle.vert.glsl  line.frag.glsl  line.vert.glsl  quad.frag.glsl  quad.vert.glsl  text.frag.glsl  text.vert.glsl
crates/vtrl_plugins/: Cargo.toml
crates/vtrl_plugins/src/: camera.rs  collision.rs  debug_overlay.rs  input.rs  lib.rs  scene.rs  scripting.rs  time.rs
crates/vtrl_plugins/src/collision/: checks.rs
crates/vtrl_plugins/src/input/: types.rs
crates/vtrl_render/: Cargo.toml
crates/vtrl_render/src/: _renderer.rs  backend.rs  command.rs  context.rs  context_bak.rs  font_atlas.rs  lib.rs  plugin.rs  renderer.rs  texture_atlas.rs
crates/vtrl_scene/: Cargo.toml
crates/vtrl_scene/src/: lib.rs
crates/vtrl_tilemap/: Cargo.toml
crates/vtrl_tilemap/src/: atlas.rs  lib.rs  plugin.rs  renderer.rs  tilemap.rs
crates/vtrl_tilemap/src/shaders/: mod.rs  tile.frag.glsl  tile.vert.glsl
crates/vtrl_time/: Cargo.toml
crates/vtrl_window/: Cargo.toml
crates/vtrl_window/src/: lib.rs
src/: main.rs
src/animations/: player.anim
src/assets/: test.csv
src/scenes/: demo.vtrl
src/scripts/: player.rhai
