[workspace]
resolver = "3"
members = [".", "crates/*", "crates/*/macros"]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
flume = "0.12"
bilge = "0.3"
ultraviolet = { version = "0.9", features = ["int", "bytemuck", "serde"] }
serde = "1"
serde_derive = "1"

[package]
name = "vitriol"
version = "0.1.0"
edition = "2024"

[dependencies]
vtrl_core = { path = "./crates/vtrl_core" }
rand = "0.10"
