[workspace]
resolver = "3"
members = [".", "crates/*", "crates/*/macros"]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
flume = "0.12"
bilge = "0.3"
ultraviolet = { version = "0.9", features = ["int", "bytemuck", "serde"] }
serde = "1"
serde_derive = "1"
lazy_static = "1.5"
image = "0.25"
string-interner = "0.19"
freetype-rs = { version = "0.37", features = ["bundled"] }
glfw = "*"
gl = "*"
dotenvy = "0.15"

[package]
name = "vitriol"
version = "0.1.0"
edition = "2024"

[dependencies]
vtrl_core = { path = "./crates/vtrl_core" }
rand = "0.10"
