[package]
name = "vtrl_common"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
once_cell.workspace = true
flume.workspace = true
bilge.workspace = true
ultraviolet.workspace = true
serde.workspace = true
serde_derive.workspace = true
lazy_static.workspace = true
string-interner.workspace = true
image.workspace = true
