[package]
name = "vtrl_core"
version = "0.1.0"
edition = "2024"

[dependencies]
vtrl_common = { path = "../vtrl_common" }
vtrl_ecs = { path = "../vtrl_ecs" }
vtrl_plugins = { path = "../vtrl_plugins" }
vtrl_window = { path = "../vtrl_window" }
vtrl_render = { path = "../vtrl_render" }
vtrl_debug = { path = "../vtrl_debug" }
vtrl_scene = { path = "../vtrl_scene" }
vtrl_time = { path = "../vtrl_time" }
vtrl_tilemap = { path = "../vtrl_tilemap" }
env_logger.workspace = true
ctrlc = "3"
dotenvy.workspace = true
