[package]
name = "vtrl_opengl"
version = "0.1.0"
edition = "2024"

[dependencies]
vtrl_common = { path = "../vtrl_common" }
vtrl_ecs = { path = "../vtrl_ecs" }
gl.workspace = true
glfw.workspace = true
lazy_static.workspace = true
image.workspace = true
serde.workspace = true
serde_derive.workspace = true
ron.workspace = true
freetype-rs.workspace = true
string-interner.workspace = true
